--- a/src/main/resources/application-desktop.properties
+++ b/src/main/resources/application-desktop.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${DB_ROOT_USER:root}
 spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@#}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
