--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:db_ds_catalog
+spring.datasource.url=jdbc:h2:mem:dslearn
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
