--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
 spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.schema.internal.script.MultiLineSqlScriptExtractor
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=true
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
