refactor: update application properties for H2 database configuration and SQL import

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.profiles.active=laptop
+spring.profiles.active=h2
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
-spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
-spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.schema.internal.script.MultiLineSqlScriptExtractor
-spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 spring.jpa.open-in-view=true
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Brazil/East
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
