--- a/src/main/resources/application-desktop.properties
+++ b/src/main/resources/application-desktop.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:${DB_DESKTOP_PORT}/db_dslearn
+spring.datasource.url=jdbc:mysql://localhost:${DB_DESKTOP_PORT:3307}/db_dslearn
 spring.datasource.username=${DB_ROOT_USER:root}
-spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@#}
+spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database=mysql
-spring.jpa.show-sql=true
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
