--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:dslearn
+spring.datasource.url=jdbc:h2:mem:db_dslearn
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
