refactor: add MySQL import script and configure Hibernate import settings

--- a/src/main/resources/application-desktop.properties
+++ b/src/main/resources/application-desktop.properties
@@ -3,3 +3,4 @@ spring.datasource.username=${DB_ROOT_USER:root}
 spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import-mysql.sql
