--- a/src/main/resources/application-desktop.properties
+++ b/src/main/resources/application-desktop.properties
@@ -4,3 +4,10 @@ spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring.jpa.properties.hibernate.hbm2ddl.import_files=import-mysql.sql
+
+# spring.datasource.url=jdbc:postgresql://localhost:${DB_DESKTOP_PORT:5432}/db_dslearn
+#spring.datasource.username=${DB_ROOT_USER:root}
+#spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=import-postgres.sql
