--- a/src/main/resources/application-laptop.properties
+++ b/src/main/resources/application-laptop.properties
@@ -3,3 +3,9 @@ spring.datasource.username=${DB_ROOT_USER:root}
 spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@#}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
+
+# spring.datasource.url=jdbc:postgresql://localhost:${DB_LAPTOP_PORT:5432}/db_dslearn
+#spring.datasource.username=${DB_ROOT_USER:root}
+#spring.datasource.password=${DB_ROOT_PASSWORD:GhostSthong567890@#}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
